--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "register": "ts-node src/register-commands.ts"
+    "register": "ts-node src/register-commands.ts",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop glyphs-bot",
+    "pm2:restart": "pm2 restart glyphs-bot",
+    "pm2:delete": "pm2 delete glyphs-bot",
+    "pm2:logs": "pm2 logs glyphs-bot",
+    "pm2:status": "pm2 status",
+    "pm2:monit": "pm2 monit"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +25,8 @@
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
     "lowdb": "^7.0.1",
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "twitter-api-v2": "^1.27.0"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
