--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
-    "register": "ts-node src/register-commands.ts",
-    "pm2:start": "pm2 start ecosystem.config.js",
-    "pm2:stop": "pm2 stop glyphs-bot",
-    "pm2:restart": "pm2 restart glyphs-bot",
-    "pm2:delete": "pm2 delete glyphs-bot",
-    "pm2:logs": "pm2 logs glyphs-bot",
-    "pm2:status": "pm2 status",
-    "pm2:monit": "pm2 monit"
+    "register": "ts-node src/register-commands.ts"
   },
   "keywords": [],
   "author": "",
